--- a/style.css
+++ b/style.css
@@ -52,52 +52,74 @@ body {
 
 .bottom_box {
   position: relative;
-  width: 480px;
+  width: 100%;
   margin: 0 auto;
-  padding: 0px 15px 15px 0px;
   box-sizing: border-box;
   border: 1px solid #aaa;
 }
 .bottom_box .line {
-  width: 460px;
+  width: 95%;
+  margin-top: 30px;
   margin: 0 auto;
   height: 3px;
   border-bottom: 2px solid #ccc;
   box-sizing: border-box;
 }
+.bottom_box .line.first_line {
+  margin-top: 0px;
+}
 .bottom_box .title_all {
   position: absolute;
   top: 3px;
   left: 0;
-  width: 450px;
   height: 50px;
   line-height: 55px;
-  padding-left: 10px;
+  padding: 0px 10px 0px;
   background-color: yellow;
+  box-sizing: border-box;
 }
 .bottom_box .short_list {
-  margin-top: 50px;
   width: 100%;
-  height: 360px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
   align-content: flex-end;
-  padding: 10px;
+  padding-top: 50px;
   box-sizing: border-box;
 }
-.bottom_box .short_list img {
+.bottom_box .short_list .short_list_img1, .bottom_box .short_list .short_list_img2,
+.bottom_box .short_list .short_list_img3, .bottom_box .short_list .short_list_img4 {
+  width: 50%;
+  height: 50%;
+  padding: 10px;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+.bottom_box .short_list .short_list_img1 img, .bottom_box .short_list .short_list_img2 img,
+.bottom_box .short_list .short_list_img3 img, .bottom_box .short_list .short_list_img4 img {
   width: 100%;
   height: auto;
   display: block;
 }
+.bottom_box .short_list .short_list_img1, .bottom_box .short_list .short_list_img3 {
+  padding-right: 5px;
+}
+.bottom_box .short_list .short_list_img2, .bottom_box .short_list .short_list_img4 {
+  padding-left: 5px;
+}
 .bottom_box .short_list .short_txt {
   font-weight: bold;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .bottom_box .Person_Issue {
   position: relative;
   width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
 }
 .bottom_box .Person_Issue .Person_Issue_img {
   display: flex;
@@ -108,6 +130,7 @@ body {
 }
 .bottom_box .Person_Issue .Person_Issue_img .Person_Issue_img_box {
   width: 40%;
+  cursor: pointer;
 }
 .bottom_box .Person_Issue .Person_Issue_img .Person_Issue_img_box img {
   width: 100%;
@@ -115,8 +138,8 @@ body {
   display: block;
 }
 .bottom_box .Person_Issue .Person_Issue_img .Person_Issue_text {
+  position: relative;
   width: 60%;
-  height: 255px;
   background-color: #eee;
 }
 .bottom_box .Person_Issue .Person_Issue_img .Person_Issue_text .Issue_text_list {
@@ -124,12 +147,52 @@ body {
   padding: 10px;
   height: 100%;
   flex-wrap: wrap;
-  align-content: center;
+  align-content: flex-start;
 }
 .bottom_box .Person_Issue .Person_Issue_img .Person_Issue_text .Issue_text_list li {
   width: 100%;
-  height: 40px;
-  line-height: 40px;
+  height: 30px;
+  line-height: 30px;
   box-sizing: border-box;
+  font-weight: bold;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 14px;
+  text-overflow: ellipsis;
+  cursor: pointer;
+}
+.bottom_box .Person_Issue .Person_Issue_img .Person_Issue_text .Issue_text_list li.hidden_txt {
+  width: 200px;
+  height: 20px;
+  line-height: 23px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  color: #aaa;
+  font-size: 12px;
+  font-weight: normal;
+  text-align: right;
+  padding-right: 5px;
+}
+.bottom_box .Person_Year {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  transform: translateY();
+}
+.bottom_box .Person_Year .Person_Year_img {
+  cursor: pointer;
+}
+.bottom_box .Person_Year .Person_Year_img img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+.bottom_box .Person_Year .Person_Year_txt {
+  position: relative;
+  left: auto;
+  top: auto;
+  text-align: center;
   font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
