--- a/style.scss
+++ b/style.scss
@@ -241,9 +241,91 @@ a {text-decoration: none;
             top: auto;
             text-align: center;
             font-weight: bold;
+            display: block;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            cursor: pointer;
         }
     }
 
+    .user_aera1{
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+
+        .user_aera_top {
+            display: flex;
+            flex-wrap: wrap;
+            align-content: flex-start;
+            flex-direction: column;
+            width: 100%;
+            height: 50px;
+            padding: 5px 0px;
+            box-sizing: border-box;
+
+            .user_aera_img {
+                width: 60px;
+                height: 40px;
+                background-color: red;
+            }
+            .user_name, .user_ID {
+                height: 20px;
+                margin-left: 15px;
+                font-size: 12px;
+                line-height: 20px;
+            }
+            .user_ID {
+                color: #aaa;
+            }
+        }
+
+        .user_txt {
+            padding: 10px 0px;
+            box-sizing: border-box;
+            font-weight: bold;
+            font-size: 18px;
+            display: block;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        .user_aera_btm {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            height: 50px;
+            background-color: #eee;
+            padding: 0px 10px;
+            box-sizing: border-box;
+            margin-bottom: 15px;
+            
+            .user_aera_btm_Box1,
+            .user_aera_btm_Box2 {
+                display: flex;
+                height: 50px;
+                line-height: 53px;
+
+                div, a {
+                    color: #aaa;
+                    padding: 0px 5px;
+                    box-sizing: border-box;
+                }
+
+                .btm_twiter_img {
+                    font-size: 16px;
+                }
+                .btm_time {
+                    font-size: 12px;
+                }
+            }
+
+            .user_aera_btm_Box2 a {
+                padding: 0px 10px;
+            }
+        }
+    }
 }
 
 
