--- a/style.css
+++ b/style.css
@@ -5,22 +5,24 @@
   font-family: "Vazirmatn", sans-serif;
 }
 
+body {
+  margin: auto 10px;
+}
+
 li {
   list-style: none;
+  cursor: pointer;
 }
 
 a {
   text-decoration: none;
+  cursor: pointer;
   color: #000;
 }
 
-body {
-  margin: 10px;
-}
-
-/* -------------------- */
 .header {
   position: relative;
+  height: 60px;
 }
 .header .title {
   text-align: center;
@@ -28,7 +30,6 @@ body {
   color: #CC6262;
   font-weight: 100;
   font-size: 45px;
-  border: 1px solid #000;
 }
 .header .navbar_burger {
   position: absolute;
@@ -56,8 +57,57 @@ body {
   color: #978D8D;
 }
 
+/* .main_box{
+    margin-top: 20px;
+    background: rgba(217, 217, 217, 0.25);
+    display: flex;
+    align-items: center;
+
+    .main_text{
+        background-color: yellow;
+        .main_inner{
+            background-color: #fff;
+            text-align: center;
+
+            .sub_title{
+                font-size: 11px;
+            }
+            .main_title{
+                font-size: 30px;
+                font-weight: bold;
+            }
+        }
+    }
+
+    .main_img{
+        background-color: yellowgreen;
+        img{
+            border: 10px solid #000;
+            min-width: 100%;
+            height: 200px;
+        }
+    }
+
+
+} */
 .main_box {
   margin-top: 20px;
+  background: rgba(217, 217, 217, 0.25);
+  display: flex;
+}
+.main_box .main {
+  height: 200px;
+  border: 1px solid #000;
+  flex-grow: 1;
+  background-color: tan;
+}
+.main_box .main .main_inner {
+  border: 1px solid #000;
+  background-color: #fff;
+}
+.main_box .main_img {
+  border: 1px solid #000;
+  flex-grow: 1;
 }
 
 .article_box {
@@ -74,6 +124,12 @@ body {
 .article_list {
   border: 1px solid #000;
   margin-top: 20px;
+}
+.article_list ul li {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  word-break: break-all;
 }
 
 .top_box {
