--- a/style.scss
+++ b/style.scss
@@ -3,21 +3,18 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-family: 'Vazirmatn', sans-serif;    
 }
-li {list-style: none;}
-a {text-decoration: none;
-    color: #000;}
 
-    body{
-        margin: 10px;
-    }
+body{ margin: auto 10px;}
+li {list-style: none; cursor: pointer;}
+a {text-decoration: none; cursor: pointer; color: #000;}
+
     
-    $point-color :#CC6262;
-    $icon-color : #978D8D;
-    
-    $point-font : 'Prata', serif;
+$point-color :#CC6262;
+$icon-color : #978D8D;
+
+$point-font : 'Prata', serif;
     
 
-/* -------------------- */
 ///////////////////////////////////////////////////////////////
 ///////////////////////////////////////////////////////////////
 
@@ -27,14 +24,13 @@ a {text-decoration: none;
 
 .header{
     position: relative;
-
+    height: 60px;
     .title{
         text-align: center;
         font-family: $point-font;
         color: $point-color;
         font-weight: 100;
         font-size: 45px;
-        border: 1px solid #000;
     }
 
     .navbar_burger{
@@ -66,9 +62,69 @@ a {text-decoration: none;
     }
 }
 
+
+
+
+/* .main_box{
+    margin-top: 20px;
+    background: rgba(217, 217, 217, 0.25);
+    display: flex;
+    align-items: center;
+
+    .main_text{
+        background-color: yellow;
+        .main_inner{
+            background-color: #fff;
+            text-align: center;
+
+            .sub_title{
+                font-size: 11px;
+            }
+            .main_title{
+                font-size: 30px;
+                font-weight: bold;
+            }
+        }
+    }
+
+    .main_img{
+        background-color: yellowgreen;
+        img{
+            border: 10px solid #000;
+            min-width: 100%;
+            height: 200px;
+        }
+    }
+
+
+} */
+
+
 .main_box{
     margin-top: 20px;
+    background: rgba(217, 217, 217, 0.25);
+    display: flex;
+
+
+    .main{
+        height: 200px;
+        border: 1px solid #000;
+        flex-grow: 1;
+        background-color: tan;
+        .main_inner{
+            border: 1px solid #000;
+            background-color: #fff;
+        }
+    }
+
+    .main_img{
+        border: 1px solid #000;
+        flex-grow: 1;
+
+    }
 }
+
+
 
 
 
@@ -87,6 +143,16 @@ a {text-decoration: none;
 .article_list{
     border: 1px solid #000;
     margin-top: 20px;
+    ul{
+        li{
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            word-break: break-all;
+
+        }
+    }
+
 
 }
 
