--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: "Roboto Condensed", sans-serif;
-  font-family: "Vazirmatn", sans-serif;
 }
 
 body {
@@ -168,6 +166,7 @@ a {
   padding: 0px 10px 0px;
   background-color: yellow;
   box-sizing: border-box;
+  font-family: "Vazirmatn", sans-serif;
 }
 .bottom_box .short_list {
   width: 100%;
@@ -179,6 +178,7 @@ a {
   padding-top: 50px;
   box-sizing: border-box;
   margin-top: 20px;
+  font-family: "Vazirmatn", sans-serif;
 }
 .bottom_box .short_list .short_list_img1, .bottom_box .short_list .short_list_img2,
 .bottom_box .short_list .short_list_img3, .bottom_box .short_list .short_list_img4 {
@@ -217,6 +217,7 @@ a {
   box-sizing: border-box;
   margin-bottom: 20px;
   margin-top: 20px;
+  font-family: "Vazirmatn", sans-serif;
 }
 .bottom_box .Person_Issue .Person_Issue_img {
   display: flex;
@@ -279,6 +280,7 @@ a {
   transform: translateY();
   margin-bottom: 20px;
   margin-top: 20px;
+  font-family: "Vazirmatn", sans-serif;
 }
 .bottom_box .Person_Year .Person_Year_img {
   cursor: pointer;
@@ -305,6 +307,7 @@ a {
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
+  font-family: "Vazirmatn", sans-serif;
 }
 .bottom_box .user_aera1 .user_aera_top,
 .bottom_box .user_aera2 .user_aera_top {
@@ -412,6 +415,7 @@ a {
   padding: 0px 10px;
   box-sizing: border-box;
   margin-bottom: 30px;
+  font-family: "Vazirmatn", sans-serif;
 }
 .bottom_box .More_Reactions .More_Reactions_tit {
   display: flex;
@@ -439,14 +443,16 @@ a {
 .bottom_box .More_Reactions_Tap {
   position: relative;
   width: 100%;
-  height: 50px;
+  height: 400px;
   padding: 10px;
   box-sizing: border-box;
+  margin-bottom: 25px;
+  font-family: "Vazirmatn", sans-serif;
 }
 .bottom_box .More_Reactions_Tap .Reactions_Tap_Menu {
   position: absolute;
   z-index: 1;
-  top: 10.6px;
+  top: 10px;
   left: 10px;
   display: flex;
   width: 250px;
@@ -466,38 +472,137 @@ a {
   color: #777;
   background-color: #bbb;
 }
-.bottom_box .More_Reactions_Tap .Tap_list {
-  position: absolute;
-  top: 10px;
-  left: 10px;
+.bottom_box .More_Reactions_Tap .Reactions_Tap_list_box {
+  width: 100%;
+  position: relative;
+  /* display:none */
+}
+.bottom_box .More_Reactions_Tap .Reactions_Tap_list_box .Reactions_Tap_list2 {
+  display: none;
+}
+.bottom_box .More_Reactions_Tap .Reactions_Tap_list_box .Tap_list {
+  width: 100%;
+  height: 330px;
   margin-top: 50px;
   border: 1px solid #000;
   box-sizing: border-box;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  padding: 10px;
 }
-.bottom_box .More_Reactions_Tap .Reactions_Tap_list2 {
-  display: none;
-}
-.bottom_box .More_Reactions_Tap .Reactions_Tap_list1 li a {
+.bottom_box .More_Reactions_Tap .Reactions_Tap_list_box .Tap_list li a {
   width: 100%;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
   height: 50px;
   font-size: 14px;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
 }
-.bottom_box .More_Reactions_Tap .Reactions_Tap_list1 li a p:first-child {
+.bottom_box .More_Reactions_Tap .Reactions_Tap_list_box .Tap_list li a p:first-child {
   width: 40px;
   text-align: center;
   line-height: 50px;
-  background-color: #eee;
-  border: 1px solid #000;
-  border-left: none;
-  border-right: none;
   box-sizing: border-box;
   font-size: 20px;
   font-weight: bold;
+  border-bottom: 1px solid #aaa;
 }
-.bottom_box .More_Reactions_Tap .Reactions_Tap_list1 li a p:last-child {
+.bottom_box .More_Reactions_Tap .Reactions_Tap_list_box .Tap_list li a p:last-child {
+  display: flex;
+  align-items: center;
+  width: 100%;
   height: 50px;
+  padding: 9px;
+  box-sizing: border-box;
+  font-size: 12px;
+  border-bottom: 1px solid #aaa;
+}
+.bottom_box .More_Reactions_Tap .Reactions_Tap_list_box .Tap_list li:last-child a p {
+  border-bottom: none;
+}
+.bottom_box .Featured {
+  display: flex;
+  margin-top: 25px;
+  padding: 10px;
+  box-sizing: border-box;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 25px;
+  font-family: "Vazirmatn", sans-serif;
+  /* display:none */
+}
+.bottom_box .Featured .Featured_box3, .bottom_box .Featured .Featured_box4 {
+  display: none;
+}
+.bottom_box .Featured .Featured_box {
+  width: 50%;
+}
+.bottom_box .Featured .Featured_box .Featured_img {
+  padding: 5px;
+  box-sizing: border-box;
+}
+.bottom_box .Featured .Featured_box .Featured_img img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+.bottom_box .Featured .Featured_box .Featured_txt {
+  font-size: 12px;
+  padding: 0px 5px;
+  box-sizing: border-box;
+}
+.bottom_box .Featured .Featured_box .Featured_txt p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bottom_box .Featured .Featured_box1 .Featured_img, .bottom_box .Featured .Featured_box3 .Featured_img {
+  padding-left: 0px;
+}
+.bottom_box .Featured .Featured_box2 .Featured_img, .bottom_box .Featured .Featured_box4 .Featured_img {
+  padding-right: 0px;
+}
+
+footer {
+  width: 100%;
+  margin-top: 50px;
+}
+footer .footer_logo_txt {
+  width: 300px;
+  height: 50px;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 50px;
+  text-shadow: 3px 3px 3px #999;
+}
+footer .footer_logo_txt p {
+  font-size: 42px;
+  font-family: "Prata", serif;
+  color: #CC6262;
+}
+footer .footer_SNS_logo {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 300px;
+  height: 50px;
+  margin: 0 auto;
+}
+footer .footer_SNS_logo .SNS_logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #CC6262;
+  box-sizing: border-box;
+  border-radius: 50%;
+  box-shadow: 3px 3px 3px #999;
+}
+footer .footer_SNS_logo .SNS_logo img {
+  width: 25px;
+  height: 25px;
+  display: block;
 }/*# sourceMappingURL=style.css.map */
