--- a/style.css
+++ b/style.css
@@ -22,19 +22,22 @@ a {
 
 .header {
   position: relative;
-  height: 60px;
+  margin-top: 20px;
 }
 .header .title {
+  height: 60px;
+  line-height: 60px;
   text-align: center;
   font-family: "Prata", serif;
   color: #CC6262;
   font-weight: 100;
   font-size: 45px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .header .navbar_burger {
   position: absolute;
-  font-size: 40px;
-  margin-left: 10px;
+  font-size: 35px;
+  padding-left: 10px;
   color: #978D8D;
   top: 50%;
   transform: translate(0, -50%);
@@ -56,62 +59,63 @@ a {
 .search_box .xi-search {
   color: #978D8D;
 }
+.search_box .search_title {
+  color: #978D8D;
+}
+.search_box .search_btn {
+  color: #fff;
+  width: 50px;
+  height: 30px;
+  font-size: 15px;
+  border: none;
+  border-radius: 18px;
+  background: rgba(204, 98, 98, 0.8);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+}
 
-/* .main_box{
-    margin-top: 20px;
-    background: rgba(217, 217, 217, 0.25);
-    display: flex;
-    align-items: center;
-
-    .main_text{
-        background-color: yellow;
-        .main_inner{
-            background-color: #fff;
-            text-align: center;
-
-            .sub_title{
-                font-size: 11px;
-            }
-            .main_title{
-                font-size: 30px;
-                font-weight: bold;
-            }
-        }
-    }
-
-    .main_img{
-        background-color: yellowgreen;
-        img{
-            border: 10px solid #000;
-            min-width: 100%;
-            height: 200px;
-        }
-    }
-
-
-} */
 .main_box {
   margin-top: 20px;
   background: rgba(217, 217, 217, 0.25);
   display: flex;
 }
 .main_box .main {
-  height: 200px;
-  border: 1px solid #000;
-  flex-grow: 1;
-  background-color: tan;
+  width: 50%;
+  position: relative;
+  display: flex;
 }
 .main_box .main .main_inner {
-  border: 1px solid #000;
+  width: 80%;
+  height: 150px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: #fff;
+  text-align: center;
 }
-.main_box .main_img {
-  border: 1px solid #000;
-  flex-grow: 1;
+.main_box .main .main_inner .inner_text {
+  font-size: 11px;
+  color: rgba(0, 0, 0, 0.6);
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+.main_box .main .main_inner .inner_title {
+  font-size: 35px;
+  font-weight: 900;
+  line-height: 1;
+  letter-spacing: -2px;
+}
+.main_box .main_img_box {
+  width: 50%;
+}
+.main_box .main_img_box .main_img img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 .article_box {
-  border: 1px solid #000;
   margin-top: 20px;
 }
 .article_box h1 {
@@ -122,8 +126,7 @@ a {
 }
 
 .article_list {
-  border: 1px solid #000;
-  margin-top: 20px;
+  margin: 30px 0;
 }
 .article_list ul li {
   overflow: hidden;
