--- a/style.scss
+++ b/style.scss
@@ -85,26 +85,23 @@ $base-font : 'Vazirmatn', sans-serif;
     margin-top: 20px;
     background: rgba(217, 217, 217, 0.25);
     display: flex;
-
     .main{
-
         width: 50%;
         position: relative;
         display: flex;
         .main_inner{
-            width: 80%;
-            height: 150px;
+            background-color: #fff;
+            padding: 20px;
+            text-align: center;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%,-50%);
-            background-color: #fff;
-            text-align: center;
             .inner_text{
                 font-size: 11px;
                 color: rgba(0, 0, 0, 0.60);
                 letter-spacing: -1px;
-                font-weight: bold;
+                margin-bottom: 5px;
             }
             .inner_title{
                 font-size: 35px;
